--- a/drivers/staging/Kconfig
+++ b/drivers/staging/Kconfig
@@ -114,4 +114,6 @@ source "drivers/staging/easel/regulator/Kconfig"
 
 source "drivers/staging/wlan_mac/Kconfig"
 
+source "drivers/staging/qcacld-2.0/Kconfig"
+
 endif # STAGING
